added hrd email

--- a/index.html
+++ b/index.html
@@ -824,9 +824,12 @@
                 </div>
             </div>
             <div style="text-align: center; margin-top: 40px;">
-                <p style="font-size: 1.2rem;"><strong>Sales Inquiries:</strong></p>
+                <p style="font-size: 1.2rem;"><strong>Inquiries:</strong></p>
                 <p style="font-size: 1.1rem; margin-top: 10px; color: #0047AB;">
                     sales@pt-sku.com
+                </p>
+                <p style="font-size: 1.1rem; margin-top: 10px; color: #0047AB;">
+                    hrd@pt-sku.com
                 </p>
             </div>
         </div>
