--- a/index.html
+++ b/index.html
@@ -11,6 +11,13 @@
             box-sizing: border-box;
         }
 
+        @media (max-width: 768px) {
+            header {
+                position: static; /* no longer sticky */
+                border-bottom: 4px solid #dc143c; /* keep the style if needed */
+            }
+        }
+
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             line-height: 1.6;
