--- a/index.html
+++ b/index.html
@@ -11,12 +11,6 @@
             box-sizing: border-box;
         }
 
-        @media (max-width: 768px) {
-            header {
-                position: static; /* no longer sticky */
-                border-bottom: 4px solid #dc143c; /* keep the style if needed */
-            }
-        }
 
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -33,6 +27,14 @@
             top: 0;
             z-index: 1000;
             border-bottom: 4px solid #dc143c;
+        }
+
+        @media (max-width: 768px) {
+            header {
+                position: static !important; /* force override sticky */
+                top: auto !important;        /* reset top */
+                border-bottom: 4px solid #dc143c; /* keep the style if needed */
+            }
         }
 
         .container {
