--- a/index.html
+++ b/index.html
@@ -18,22 +18,17 @@
             color: #333;
         }
 
+        /* Default: static for all */
         header {
-            background: linear-gradient(135deg, #0047AB 0%, #003380 100%);
-            color: white;
-            padding: 1rem 0;
-            box-shadow: 0 2px 10px rgba(0,0,0,0.1);
-            position: sticky;
-            top: 0;
-            z-index: 1000;
-            border-bottom: 4px solid #dc143c;
+            position: static;
         }
 
-        @media (max-width: 768px) {
+        /* Only sticky on desktop */
+        @media (min-width: 769px) {
             header {
-                position: static !important; /* force override sticky */
-                top: auto !important;        /* reset top */
-                border-bottom: 4px solid #dc143c; /* keep the style if needed */
+                position: sticky;
+                top: 0;
+                z-index: 1000;
             }
         }
 
