--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <title>PT. Sinarkimia Utama - A Chemical Distribution Company</title>
 
     <!-- Favicon -->
-    <link rel="icon" type="image/png" href="logo.png">
-    <link rel="shortcut icon" href="logo.png" type="image/png">
-    <link rel="apple-touch-icon" sizes="180x180" href="logo.png">
+    <link rel="icon" type="image/jpg" href="logo.jpg">
+    <link rel="shortcut icon" href="logo.jpg" type="image/jpg">
+    <link rel="apple-touch-icon" sizes="180x180" href="logo.jpg">
 
     <style>
         * {
