--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PT. Sinarkimia Utama - A Chemical Distribution Company</title>
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/jpg" href="logo.jpg">
+    <link rel="shortcut icon" href="logo.jpg" type="image/jpg">
+    <link rel="apple-touch-icon" sizes="180x180" href="logo.jpg">
+
     <style>
         * {
             margin: 0;
@@ -21,6 +27,7 @@
         /* Default: static for all */
         header {
             position: static;
+            top: auto;
         }
 
         /* Only sticky on desktop */
