--- a/index.html
+++ b/index.html
@@ -33,9 +33,20 @@
         /* Only sticky on desktop */
         @media (min-width: 769px) {
             header {
-                position: sticky;
-                top: 0;
-                z-index: 1000;
+                position: static;
+                top: auto;
+                background: linear-gradient(135deg, #0047AB 0%, #003380 100%); /* keep same gradient */
+                color: white; /* force text white */
+                padding: 1rem 0; /* consistent spacing */
+            }
+
+            nav a {
+                color: white; /* force links white */
+            }
+
+            nav a.cta-button {
+                background: white; 
+                color: #dc143c;
             }
         }
 
