--- a/index.html
+++ b/index.html
@@ -4,12 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PT. Sinarkimia Utama - A Chemical Distribution Company</title>
-
-    <!-- Favicon -->
-    <link rel="icon" type="image/jpg" href="logo.jpg">
-    <link rel="shortcut icon" href="logo.jpg" type="image/jpg">
-    <link rel="apple-touch-icon" sizes="180x180" href="logo.jpg">
-
     <style>
         * {
             margin: 0;
@@ -17,37 +11,19 @@
             box-sizing: border-box;
         }
 
+
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             line-height: 1.6;
             color: #333;
         }
 
-        /* Apply background and text color for ALL screens */
+        /* Default: static for all */
         header {
-            background: linear-gradient(135deg, #0047AB 0%, #003380 100%);
-            color: white;
-            padding: 1rem 0;
+            position: static;
         }
 
-        /* Default: header scrolls normally on mobile */
-        @media (max-width: 768px) {
-            header {
-                position: static; /* scroll normally */
-                top: auto;
-            }
-
-            nav a {
-                color: white; /* ensure links stay white */
-            }
-
-            nav a.cta-button {
-                background: white;
-                color: #dc143c;
-            }
-        }
-
-        /* Desktop: sticky header */
+        /* Only sticky on desktop */
         @media (min-width: 769px) {
             header {
                 position: sticky;
