renew logo png and favicon

--- a/index.html
+++ b/index.html
@@ -452,7 +452,7 @@
         <div class="container">
             <div class="header-content">
                 <div class="logo-section">
-                    <img src="logo.jpg" alt="Sinarkimia Logo" class="logo">
+                    <img src="logo.png" alt="Sinarkimia Logo" class="logo">
                     <div class="company-name">
                         <h1>PT. SINARKIMIA UTAMA</h1>
                         <p>A Chemical Distribution Company</p>
