--- a/index.html
+++ b/index.html
@@ -26,6 +26,12 @@
             box-sizing: border-box;
         }
 
+        img {
+            user-select: none;
+            -webkit-user-drag: none;
+            pointer-events: none;
+        }
+
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             line-height: 1.6;
