added feed stuff

--- a/index.html
+++ b/index.html
@@ -705,6 +705,11 @@
                     <li>Sodium Hexametaphosphate (SHMP Food Grade)</li>
                     <li>Sodium Tripolyphosphate (STPP Food Grade)</li>
                     <li>Tri Calcium Phosphate (TCP Food Grade)</li>
+                    <li>L-lysine HCL/Sulphate Feed Grade Meihua</li>
+                    <li>L-Threonine Feed Grade Meihua</li>
+                    <li>Monocalcium Phosphate</li>
+                    <li>Monodicalcium Phosphate</li>
+                    <li>Dicalcium Phosphate</li>
                     </ul>
                 </div>
                 <div class="category">
