revision for feed grade

--- a/index.html
+++ b/index.html
@@ -694,7 +694,8 @@
                     <li>Disodium Phosphate (Feed Grade)</li>
                     <li>Maltodextrine</li>
                     <li>Mono Calcium Phosphate (Feed Grade)</li>
-                    <li>Mono Sodium Phosphate (MSP Food Grade)</li>
+                    <li>Mono Dicalcium Phosphate</li>
+                    <li>Mono Sodium Phosphate (Food Grade)</li>
                     <li>Phosphoric Acid, Food Grade 85%</li>
                     <li>Potato Starch</li>
                     <li>Potassium Chloride Food Grade</li>
@@ -707,9 +708,6 @@
                     <li>Tri Calcium Phosphate (TCP Food Grade)</li>
                     <li>L-lysine HCL/Sulphate Feed Grade Meihua</li>
                     <li>L-Threonine Feed Grade Meihua</li>
-                    <li>Monocalcium Phosphate</li>
-                    <li>Monodicalcium Phosphate</li>
-                    <li>Dicalcium Phosphate</li>
                     </ul>
                 </div>
                 <div class="category">
